syntax = "proto3";

package services;

import "TransactionDomain.proto";

option java_multiple_files = true;
option java_package = "fima.services.transaction";
option java_outer_classname = "TransactionServiceProtos";

message MonthInYear {
    int32 month = 2;
    int32 year = 3;
}

message MonthlyStatistics {
    int32 month = 1;
    int32 year = 2;
    int32 transaction = 3;
    float sum = 4;
    float balance = 5;
}

message GetTransactionRequest {
    string id = 1;
}

message GetTransactionResponse {
    domain.Transaction transaction = 1;
}

message GetRecentTransactionsRequest {
    int32 limit = 1;
    int32 offset = 2;
}

message GetRecentTransactionResponse {
    repeated domain.Transaction transactions = 1;
}

message InsertTransactionRequest {
    domain.RawTransaction transaction = 1;
}

message InsertTransactionResponse {
    domain.RawTransaction transactions = 1;
}

message DeleteTransactionRequest {
    string id = 1;
}

message DeleteTransactionResponse {
}

message TransactionsStatisticsRequest {
    MonthInYear startDate = 1;
    MonthInYear endDate = 2;
}

message TransactionStatisticsResponse {
    repeated MonthlyStatistics monthlyStatistics = 1;
}

service TransactionService {

    rpc getTransaction(GetTransactionRequest) returns (GetTransactionResponse) {}

    rpc getRecentTransactions(GetRecentTransactionsRequest) returns (GetRecentTransactionResponse) {}

    rpc getMonthlyStatistics(TransactionsStatisticsRequest) returns (TransactionStatisticsResponse) {}
}
